# whathappenednow

./: .gitignore  README.md  pyproject.toml
app/: calendar_features.py  daily_fetch.py  data_script.py  db.py  discord_webhooks.json.example  ib_client.py  macro_data.py  main.py  market_data.py  merge_features.py  models.py  news_data.py  notifications.py  predict_vol.py  predictor.py  sentiment-local.py  sentiment.py
