[project]
name = "whathappenednow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "databento>=0.40.0",
    "dotenv>=0.9.9",
    "huggingface-hub>=0.26.0",
    "newsapi-python>=0.2.7",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "pandas-ta>=0.4.71b0",
    "pyarrow>=24.0.0",
    "python-dateutil>=2.9.0",
    "requests>=2.32.5",
    "scikit-learn>=1.5.0",
    "sentence-transformers>=3.0.0",
    "xgboost>=3.2.0",
]
